<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">THW Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="simple_menu_name">Simple Adapter</string>
    <string name="simple_menu_condensed">Simple</string>
    <string name="fancy_menu_name">Fancy Menu</string>
    <string name="fancy_menu_condensed">Fancy</string>
    <string name="expand_all_menu">Expand all</string>
    <string name="expand_all_condensed">Expand All</string>
    <string name="collapsible_menu_enable">Enable collapsible</string>
    <string name="collapsible_condensed_enable">Enable collapsible</string>
    <string name="collapsible_menu_disable">Disable collapsible</string>
    <string name="collapsible_condensed_disable">Disable collapsible</string>
    <string name="collapse_all_menu">Collapse all</string>
    <string name="collapse_all_condesed">Collapse all</string>
    <string name="expand_menu">Expand</string>
    <string name="expand_menu_condensed">Expand</string>
    <string name="delete_menu">Delete</string>
    <string name="delete_menu_condensed">Delete</string>
    <string name="title_activity_detail_list">DetailListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="setEmptyLabel"></string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="status">Status</string>
    <string name="go">Go</string>
    <string name="search">Search</string>
    <string name="soll">Soll</string>
    <string name="ist">Ist</string>
    <string name="fremdbeschafft">Fremdbeschafft</string>
    <string name="treeitemimage">TreeItemImage</string>
    <string name="export_data">Export</string>
    <string name="import_data">Import</string>
    <string name="file_format">Format</string>
    <string name="file_source">Source</string>
    <string name="file_import">File</string>
    <string name="db_import">DB</string>
    <string name="db_import_automatic">automatic</string>
    <string name="db_url">Url</string>
    <string name="clear_db">Clean Import</string>
    <string name="save_import">Save + Import</string>
    <string name="save_export">Save + Export</string>
    <string name="filename">Filename</string>
    <string name="import_settings">Import Settings</string>
    <string name="export_settings">Export Settings</string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="title_activity_export_data">ExportData</string>
    <string name="sachnummer">Sachnummer</string>
    <string name="invno">Inventarnummer</string>
    <string name="devno">Geraetenummer</string>
    <string name="treesize">TreeSize</string>
    <string name="listsize">ListSize</string>
    <string name="path">Path</string>
    <string name="collapsed">Collapsed</string>
    <string name="save">Save</string>
    <string name="sachnummer_kurz">Sachnr:</string>
    <string name="InvNo_kurz">InvNo:</string>
    <string name="deviceNo_kurz">GerNr:</string>
    <string name="dialog_detail_pos">Weiter</string>
    <string name="dialog_detail_neg">Bearbeiten</string>
    <string name="take_picture">Bild aufnehmen</string>
    <string name="sure">Are you sure to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Please wait</string>
    <string name="save_to_db">Saving Data to DB!</string>
    <string name="load_from_db">Loading Data from DB!</string>
    <string name="init_folders">Init Folders</string>
    <string name="suc">successful</string>
    <string name="export">exporting Item</string>
    <string name="importing">importing Data</string>
    <string name="loading_row_import">loading RowNr</string>
    <string name="caution">Achtung</string>
     <string name="save_question">Moechten Sie die Aenderungen speichern?</string>

    <!-- ERROR -->
    <string name="error_save">Fehler beim speichern:</string>
    <string name="error_no_item_checked">"Kein Eintrag ausgewaehlt! Eintrag anchecken"</string>
    <string name="error_not_available">Funktion nicht verfuegbar</string>
    <string name="error_no_File_selected">keine Datei ausgewaehlt!</string>
    <string name="error_import">Import fehlgeschlagen</string>
   
   
    
        
    

</resources>