<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 		
         android:id="@+id/search"
		 android:title="@string/search"
		 android:icon="@drawable/search_icon"
		 android:showAsAction="always"
		 android:actionViewClass="android.widget.SearchView"/>
    
     <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/overflow_icon"
        android:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/importdata"
                android:title="@string/import_data"
                android:showAsAction="always"/>
            <item
                android:id="@+id/exportdata"
                android:showAsAction="always"
                android:title="@string/export_data"/>
        </menu>
    </item>
    
</menu>