<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExportDataActivity" >

    <TextView
        android:id="@+id/tvpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ThwBlue"
        android:text="@string/file_format"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spformat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ThwBlue"
        android:text="@string/file_source"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etfilename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnimport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickImport"
        android:text="@string/save_import" />

</LinearLayout>